adicionando barrra de infromações

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,9 +1,14 @@
 @use 'hero';
+@use 'components/_infos-bar.scss';
+@use 'components/_buttons.scss';
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: Roboto, sans-serif;
+    color: white;
+    list-style: none;
 }
 .container{
     max-width: 960px;
