--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,13 +1,15 @@
 @use 'hero';
 @use 'components/_infos-bar.scss';
 @use 'components/_buttons.scss';
+@use 'event';
+@use 'variables';
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: Roboto, sans-serif;
-    color: white;
+    color: variables.$textColor;
     list-style: none;
 }
 .container{
