--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -10,7 +10,7 @@
 
     &--primary{
         color: #fff;
-        background-color: variables.$purple;
+        background-color: variables.$ciano;
     }
 
     @media (max-width:640px) {
